Pin the org secret drift table, order and visibility guard
Three of the five per-secret drift rows had no test, so a swapped
recorded/actual timestamp in SecretChanged would have passed.

Map.copyOf gave the desired and actual secret maps an iteration order
salted per JVM run, which shuffled the reported secrets between runs of
the same config; both maps are insertion-ordered now.

The fix resolved selectedRepositories to ids under every visibility, so a
stale list left under "private" failed the push over ids the PUT would
have dropped anyway.

Claude-Session: https://claude.ai/code/session_014wTAEAEa9wytEzdrqpvBsH